--- a/index.html
+++ b/index.html
@@ -3,26 +3,28 @@
 <html lang="en">
 <head>
   <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Lyla McGovern — Portfolio</title>
+  <meta name="description" content="Portfolio for Lyla McGovern — web design, digital media, and film projects." />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="assets/css/styles.css">
 </head>
 <body>
-  <!-- NAVBAR -->
+  <!-- NAV -->
   <nav class="navbar navbar-expand-lg navbar-light bg-white shadow-sm">
     <div class="container">
       <a class="navbar-brand fw-bold" href="index.html">Lyla McGovern</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-              data-bs-target="#nav" aria-controls="nav" aria-expanded="false">
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#nav"
+              aria-controls="nav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
+
       <div id="nav" class="collapse navbar-collapse">
         <ul class="navbar-nav ms-auto">
+          <li class="nav-item"><a class="nav-link active" href="index.html">Home</a></li>
           <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
           <li class="nav-item"><a class="nav-link" href="projects.html">Projects</a></li>
           <li class="nav-item"><a class="nav-link" href="resume.html">Resume</a></li>
-          <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
         </ul>
       </div>
     </div>
@@ -31,73 +33,79 @@
   <!-- HERO -->
   <header class="py-5 bg-light">
     <div class="container d-lg-flex align-items-center gap-4">
-      <img src="assets/images/profile.jpg" alt="Profile" class="rounded-circle me-3" width="160" height="160">
+      <img src="assets/images/profile.jpg" alt="Lyla McGovern" class="rounded-circle me-3 profile-img" width="160" height="160">
       <div>
-        <h1 class="display-6">Hi, I’m Lyla McGovern</h1>
-        <p class="lead mb-2"> Hi! I’m Lyla. I’m a student who loves web design, digital media, and learning new creative tools. I enjoy making things look clean, organized, and visually appealing. I’m still growing my skills, but I love experimenting with design ideas and building projects that I’m proud of. I’m always excited to learn something new and find better ways to bring my ideas to life.</p>
-        <a href="projects.html" class="btn btn-primary">View Projects</a>
+        <h1 class="display-6 mb-1">Hi, I’m Lyla McGovern</h1>
+        <p class="lead mb-2">Student & Digital Media Creator — web design, short film, and digital storytelling.</p>
+        <a href="projects.html" class="btn btn-primary me-2">View Projects</a>
+        <a href="resume.html" class="btn btn-outline-secondary">Resume</a>
       </div>
     </div>
   </header>
 
-  <!-- SKILLS PREVIEW -->
+  <!-- SKILLS -->
   <section class="py-5">
     <div class="container">
       <h2 class="h4 mb-3">Skills</h2>
       <div class="row g-3">
-        <div class="col-md-3"><div class="p-3 border rounded">HTML5</div></div>
-        <div class="col-md-3"><div class="p-3 border rounded">CSS3 & Bootstrap</div></div>
-        <div class="col-md-3"><div class="p-3 border rounded">JavaScript</div></div>
-        <div class="col-md-3"><div class="p-3 border rounded">Figma</div></div>
+        <div class="col-6 col-md-3"><div class="skill">HTML5</div></div>
+        <div class="col-6 col-md-3"><div class="skill">CSS3 & Bootstrap</div></div>
+        <div class="col-6 col-md-3"><div class="skill">JavaScript</div></div>
+        <div class="col-6 col-md-3"><div class="skill">Figma</div></div>
       </div>
     </div>
   </section>
 
-  <!-- Projects preview -->
+  <!-- FEATURED PROJECT PREVIEW -->
   <section class="py-5 bg-light">
     <div class="container">
-      <h2 class="h4 mb-3">Selected Projects</h2>
-      <div class="row g-4">
-        <div class="col-md-4">
-          <div class="card h-100">
-            <img src="assets/images/project1.png" class="card-img-top" alt="">
-            <div class="card-body">
-              <h5 class="card-title">Project Title</h5>
-              <p class="card-text">Short description. <a href="projects.html">More →</a></p>
-            </div>
-          </div>
+      <h2 class="h4 mb-3">Featured Project</h2>
+      <div class="row g-4 align-items-center">
+        <div class="col-md-5">
+          <img src="assets/images/journey-poster.jpg" alt="The Journey of an Influencer poster" class="img-fluid rounded shadow-sm">
         </div>
-        <!-- repeat -->
+        <div class="col-md-7">
+          <h3 class="h5">The Journey of an Influencer</h3>
+          <p class="mb-2">A short film about a teen obsessed with likes who learns authenticity matters. Tied to the film theory concept of <strong>the gaze</strong>.</p>
+          <a href="projects.html" class="btn btn-primary">Learn more →</a>
+        </div>
       </div>
     </div>
   </section>
 
-  <!-- CONTACT (uses Web3Forms) -->
+  <!-- CONTACT -->
   <section id="contact" class="py-5">
     <div class="container">
       <h2 class="h4 mb-3">Contact</h2>
-      <form id="contact-form" method="POST" action="https://api.web3forms.com/submit">
+      <p class="small text-muted">Want to collaborate or provide feedback? Send a message below.</p>
+
+      <form id="main-contact" action="https://api.web3forms.com/submit" method="POST" class="row g-3 needs-validation" novalidate>
         <input type="hidden" name="access_key" value="YOUR_WEB3FORMS_ACCESS_KEY">
-        <div class="mb-3">
-          <label class="form-label">Name</label>
-          <input class="form-control" name="name" required>
+        <div class="col-md-6">
+          <label for="name" class="form-label">Name</label>
+          <input id="name" name="name" class="form-control" required>
+          <div class="invalid-feedback">Please enter your name.</div>
         </div>
-        <div class="mb-3">
-          <label class="form-label">Email</label>
-          <input class="form-control" type="email" name="email" required>
+        <div class="col-md-6">
+          <label for="email" class="form-label">Email</label>
+          <input id="email" type="email" name="email" class="form-control" required>
+          <div class="invalid-feedback">Please enter a valid email.</div>
         </div>
-        <div class="mb-3">
-          <label class="form-label">Message</label>
-          <textarea class="form-control" name="message" rows="4" required></textarea>
+        <div class="col-12">
+          <label for="message" class="form-label">Message</label>
+          <textarea id="message" name="message" rows="4" class="form-control" required></textarea>
+          <div class="invalid-feedback">Please write a message.</div>
         </div>
-        <button class="btn btn-primary" type="submit">Send</button>
+        <div class="col-12">
+          <button class="btn btn-primary" type="submit">Send</button>
+          <span id="main-contact-feedback" class="ms-3 small text-muted" aria-live="polite"></span>
+        </div>
       </form>
-      <div id="form-status" class="mt-3" style="display:none;"></div>
     </div>
   </section>
 
   <footer class="py-4 bg-white text-center">
-    <div class="container small">© Your Name — <a href="https://github.com/yourusername">GitHub</a></div>
+    <div class="container small">© Lyla McGovern — <a href="https://github.com/yourusername" target="_blank" rel="noopener">GitHub</a></div>
   </footer>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
